--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     ],
     "require": {
         "php": ">=7.0",
-        "illuminate/database": "^6.20.27|^7.0|^8.0|^9.0",
-        "illuminate/events": "^6.0|^7.0|^8.0|^9.0",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0"
+        "illuminate/database": "^6.20.27|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/events": "^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
